# otxserver

./: .appveyor.yml  .gitignore  .travis.yml  CHANGELOG  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  Dockerfile  README.md  RESERVERD_IDS.txt  appveyor.yml  badger.xml  bat.xml  behemoth.xml  black knight.xml  bonebeast.xml  bug.xml  butterfly purple.xml  butterfly yellow.xml  centipede.xml  chicken.xml  config.lua  config.lua.dist  crab.xml  crypt shambler.xml  cyclops.xml  dark monk.xml  demon.xml  dllFilesx32.7z  dllFilesx64.7z  dllpack-x32.7z  docker-compose.yaml  dog.xml  dwarf.xml  dworc fleshhunter.xml  dworc venomsniper.xml  efreet.xml  elder beholder.xml  elephant.xml  elf arcanist.xml  (+39 more)
.github/: FUNDING.yml  labeler.yml
.github/workflows/: autofix-ci.yml  build-ubuntu.yml  build-windows-cmake.yml  build-windows-solution.yml  build-windows.yml  ci.yml  codacy-analysis.yml  codeql-analysis.yml  copilot-issue-fix.yml  deploy-neep.yml  mysql-schema-check.yml  reusable-build-docker.yml  reusable-build-linux.yml  reusable-build-windows.yml  reusable-checks.yml  reviewdog.yml
cmake/modules/: BaseConfig.cmake  CanaryLib.cmake  Sources.cmake
data/: global.lua  stages.lua
data-otxserver-data/: global.lua
data-otxserver-data/XML/: events.xml  groups.xml  vocations.xml
data-otxserver-data/items/: items.xml
data-otxserver-data/npc/: Albinius.lua  Gloria.lua  Henrry.lua  Pablo.lua  Yura.lua
data-otxserver/npc/: Dan.lua  Edson.lua  Javier.lua  Villager Woman.lua  Wendy.lua
data-otxserver/raids/: raids.xml
data-otxserver/world/: forgotten-house.xml  forgotten.otbm
data/XML/: channels.xml  events.xml  gamestore.xml  groups.xml  imbuements.xml  mounts.xml  outfits.xml  vocations.xml
data/actions/: actions.xml
data/chatchannels/: chatchannels.xml
data/creaturescripts/: creaturescripts.xml
data/events/: events.xml
data/globalevents/: globalevents.xml
data/items/: items.otb  items.xml
data/lib/: 000-constant.lua  001-string.lua  002-wait.lua  003-functions.lua  004-database.lua  012-table.lua  013-math.lua  031-vocations.lua  033-ip.lua  034-exhaustion.lua  050-function.lua  101-compat.lua  lib.lua  libs.lua
data/migrations/: 27.lua
data/modules/: modules.xml
data/monster/: missing.txt  monsters.xml
data/movements/: movements.xml
data/npc/: Albinius.xml  Aldo.xml  Alejandra.xml  Cesar.xml  Chavy.xml  Chuyito.xml  Citizen.xml  Citizen_addon1_fynn.xml  Citizen_women.xml  Citizen_women_addon2_fynn.xml  (+33 more)
docker/: .env.dist  DOCKER.md  Dockerfile.arm  Dockerfile.dev  Dockerfile.server  Dockerfile.x86  docker-compose.yml  test-server.sh
docs/: FeatureLOG.txt  commandsList  configHelp  luaFunctions
logs/: .gitkeep
mods/: annihilator.xml  custom_commands.xml  firstitems_voc.xml  mod_cast.xml
movies/: .gitignore  cams.php
otxserver2/: CHANGELOG  dllpack-x64.7z
otxserver3/: CHANGELOG  different corpses for each vocation  empty
path_10_11/: config.lua
path_10_8/: config.lua
path_10_9/: .gitignore  .travis.yml  CMakeLists.txt  config.lua  schema.sql
path_10_x/: config.lua
path_10x/: config.lua
path_11_x/: config.lua
path_7_7/: .gitignore  CMakeLists.txt  config.lua  schema.sql
path_7_s/: config.lua
path_7_x/: config.lua  monsters.h  readme
path_7x/: config.lua
path_85x/: config.lua
path_86x/: config.lua
path_87x/: config.lua
path_8_0/: config.lua
path_8_1x/: config.lua
path_8_5/: config.lua
path_8_5x/: config.lua
path_8_5x/sources/: Makefile.am  baseevents.cpp  beds.cpp  chat.cpp  combat.cpp  condition.cpp  configmanager.cpp  configmanager.h  configure.ac  connection.cpp  connection.h  const.h  container.cpp  container.h  creature.cpp  creature.h  creatureevent.cpp  creatureevent.h  databasemanager.cpp  definitions.h  enums.h  game.cpp  game.h  house.h  iologindata.cpp  iomapserialize.cpp  item.cpp  item.h  items.cpp  items.h  luascript.cpp  luascript.h  map.cpp  monster.cpp  monster.h  monsters.cpp  networkmessage.cpp  networkmessage.h  otserv.cpp  outputmessage.h  (+21 more)
path_8_5x/sources/msvc/: TheOTXServer.vcxproj  debug.props
path_8_6/: .gitignore  README.md  config.lua  schema.sql
path_8_6x/: config.lua
path_8_7/: config.lua
path_8_7x/: config.lua
path_8x/: config.lua
schemas/: mysql.sql  otxserver.s3db  sqlite.sql
sources/: Makefile  Makefile.am  actions.cpp  admin.cpp  allocator.h  baseevents.cpp  baseevents.h  beds.cpp  build.sh  chat.cpp  chat.h  combat.cpp  combat.h  combat_helpers.h  condition.cpp  configmanager.cpp  configmanager.h  configure.ac  connection.cpp  connection.h  const.h  container.cpp  container.h  creature.cpp  creature.h  creatureevent.cpp  creatureevent.h  database.cpp  database.h  databasemanager.cpp  databasemysql.cpp  databasepgsql.cpp  databasesqlite.cpp  databasesqlite.h  definitions.h  dispatcher.cpp  dispatcher.h  enums.h  fileloader.cpp  fileloader.h  (+83 more)
src/: CMakeLists.txt  account.cpp  account.h  actions.cpp  actions.h  ban.h  baseevents.cpp  baseevents.h  bed.cpp  bed.h  canary_server.cpp  chat.cpp  chat.h  combat.cpp  combat.h  commands.cpp  condition.cpp  condition.h  configmanager.cpp  configmanager.h  connection.cpp  connection.h  const.h  container.cpp  container.h  core.hpp  creature.cpp  creature.h  creatureevent.h  cylinder.h  database.h  databasemanager.h  databasetasks.h  definitions.h  depotchest.cpp  depotchest.h  depotlocker.h  enums.h  events.cpp  events.h  (+103 more)
testing/: beds.cpp  chat.cpp  chat.h  combat.cpp  combat.h  configmanager.cpp  configmanager.h  const.h  creature.h  creatureevent.cpp  creatureevent.h  depot.h  game.cpp  game.h  group.cpp  group.h  house.cpp  ioban.cpp  ioguild.cpp  iologindata.cpp  iomap.cpp  itemattributes.h  itemloader.h  items.cpp  items.h  luascript.cpp  monsters.cpp  monsters.h  networkmessage.h  npc.h  otpch.cpp  outputmessage.h  player.cpp  player.h  protocol.h  protocolgame.cpp  protocolgame.h  protocollogin.cpp  protocolold.cpp  raids.cpp  (+11 more)
tests/: test.env
vc14/: otxserver.rc  otxserver.sln  otxserver.vcxproj  theforgottenserver.sln  theforgottenserver.vcxproj
vcproj/: otxserver.sln  otxserver.vcxproj
(+8084 files in other folders)
